--- a/pom.xml
+++ b/pom.xml
@@ -113,11 +113,18 @@
 			<groupId>software.amazon.awssdk</groupId>
 			<artifactId>dynamodb-enhanced</artifactId>
 		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>software.amazon.awssdk</groupId>-->
+<!--			<artifactId>http-clients</artifactId>-->
+<!--			<version>2.15.35</version>-->
+<!--		</dependency>-->
+
 		<dependency>
-			<groupId>software.amazon.awssdk</groupId>
-			<artifactId>http-clients</artifactId>
-			<version>2.15.35</version>
+			<groupId>com.github.derjust</groupId>
+			<artifactId>spring-data-dynamodb</artifactId>
+			<version>5.1.0</version>
 		</dependency>
+
 	</dependencies>
 
 	<dependencyManagement>
